Kubernetes/Kubectl/jenkins-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins:2.60.3
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pod-volumes-localvolume-volume
          mountPath: /opt/jenkins
      volumes:
      - name: pod-volumes-localvolume-volume
        persistentVolumeClaim: 
          claimName: localvolume-pvc
